frontend/src/app/search/search.component.css
/* selection list style */
.mat-selection-list {
  max-height: 265px;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
  box-shadow: 0 2px 4px -1px rgba(0,0,0,.2),0 4px 5px 0 rgba(0,0,0,.14),0 1px 10px 0 rgba(0,0,0,.12);
  padding-top: initial;
  margin-top: -1.15em;
  position: absolute;
  z-index: 99;
  width: 100%;
  background: white;
}

.mat-list-base[dense] {
  padding-top: initial;
}

/* option text alignment */
.mat-list-option {
  text-align: left;
}

/* hide checkbox */
.hide-mat-checkbox ::ng-deep.mat-pseudo-checkbox {
  display: none !important;
}

.sync-container {
  position: relative;
  display: inline-block;
  width: 100%;
}

.form-input-field {
  width: 100%;
  display: inline-block;
}

